# HarshitDoshi.github.io

./: .index.html.swp  CNAME  README.md  RJKT_OS.css  RJKT_OS.html  _config.yml  blog.html  clue1b.html  clue4a.html  evbc3rbew.html  index.html  laskdl5dadasd.html  ldldld2.html  markdown_tutorial.css  markdown_tutorial.html  mbm2nbvm.html  papapa3.html  pobn4ivopin.html  portfolio.html  post.html  post0.html  resume.css  resume.html  rjktos.html  style.css  tywu1ioreyto.html  xfxfxf5.html  ytytyt1.html
api/: requirements.txt
api/configuration/: asgi.py  middleware.py  settings.py  urls.py
backup/: index.html
blog/: blog-post-template.html  blog.html
blog/posts/: hello-world.html  mac-and-breeze.html  new-beginnings.html  six-months-at-cerner-corporation.html
client/: package-lock.json  package.json
css/: blog-home.css  blog-post.css  index.css  resume.css
css/my/: resume.css
dbms/: connect.inc.php  entry.php  link1.php  project.php  view1.php
legacy/: index.html  old.css
legacy/pwa/: package-lock.json  package.json
legacy/web/: package-lock.json  package.json  tailwind.config.js
pwa/: package-lock.json  package.json  tailwind.config.js
pwa/src/: App.tsx
res/: blog-post-template.html
res/old_files/: resume.html  (+1 more)
server/: README.md  main.py  pyproject.toml
server/certificates/: cert.pem
server/keys/: private.pem  public.pem
server/models/: __init__.py  jwt.py  user.py
server/utilities/: __init__.py  constants.py  jwt.py  primary_keys.py  se.py  security.py
web/: manifest.json  package-lock.json  package.json  tailwind.config.js
(+101 files in other folders)
