[tool.poetry]
name = "server"
version = "0.0.1"
description = ""
authors = ["Harshit Doshi <5103046+HarshitDoshi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.7"
twisted = "^22.10.0"
pyopenssl = "^23.0.0"
service-identity = "^21.1.0"
idna = "^3.4"
authlib = "^1.2.0"
klein = "^21.8.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
